--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "cryptiles": "^4.1.3",
     "deep-extend": "^0.5.1",
     "gsap": "^1.20.4",
     "hoek": "^5.0.4",
