--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "deep-extend": "^0.5.1",
     "gsap": "^1.20.4",
     "hoek": "^5.0.4",
+    "macaddress": "^0.2.9",
     "mapbox-gl": "^0.44.1",
     "node-sass": "^4.11.0",
     "nuxt": "^1.4.5",
